--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -24,22 +24,17 @@
     "@nestjs/swagger": "^7.1.2",
     "@nestjs/throttler": "^4.2.1",
     "@nestjs/typeorm": "^10.0.0",
+    "ali-oss": "^6.20.0",
     "bcrypt": "^5.1.1",
-    "cheerio": "1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "compressing": "^1.10.0",
     "dotenv-flow": "^4.1.0",
     "express-session": "^1.18.0",
-    "multer": "1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "node-rsa": "^1.1.1",
     "nodemailer": "^6.9.13",
-    "oracledb": "^6.6.0",
     "redis": "^4.6.14",
-    "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.0",
     "ts-mixer": "^6.0.3",
@@ -57,6 +52,7 @@
     "@types/node-rsa": "^1.1.1",
     "@types/nodemailer": "^6.4.15",
     "@types/papaparse": "^5.3.14",
+    "@types/ali-oss": "^6.16.11",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.45.0",
