--- a/projects/shared/package.json
+++ b/projects/shared/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "dependencies": {
     "@quasar/extras": "^1.16.5",
+    "@vuepic/vue-datepicker": "^11.0.1",
     "@vueuse/core": "^10.2.1",
     "@vueuse/head": "^2.0.0",
     "@wangeditor/editor": "^5.1.23",
