--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -52,7 +52,8 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.7",
     "moment": "^2.30.1",
-    "unplugin-auto-import": "^19.1.1",
+    "types": "workspace:^",
+    "utils": "workspace:^",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
@@ -68,6 +69,7 @@
     "sass": "^1.85.1",
     "sass-loader": "10.1.1",
     "typescript": "^4.9.4",
+    "unplugin-auto-import": "^19.1.1",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
   }
