feat(app):完善部分接口

--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -52,6 +52,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.7",
     "moment": "^2.30.1",
+    "shared": "workspace:^",
     "types": "workspace:^",
     "utils": "workspace:^",
     "vue": "^3.4.21",
