--- a/projects/app/tsconfig.json
+++ b/projects/app/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "types": [
-      "@dcloudio/types"
+      "@dcloudio/types",
+      "uview-plus/types"
     ],
     "paths": {
       "~/*": ["src/*"]
