--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -55,6 +55,7 @@
     "shared": "workspace:^",
     "types": "workspace:^",
     "utils": "workspace:^",
+    "uview-plus": "^3.4.4",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
@@ -65,12 +66,15 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
+    "@uview-plus/types": "^3.2.5",
+    "@vant/auto-import-resolver": "^1.3.0",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.85.1",
     "sass-loader": "10.1.1",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
   }
