--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -73,6 +73,7 @@
     "@tanstack/vue-query": "^5.62.16",
     "abortcontroller-polyfill": "^1.7.8",
     "dayjs": "1.11.10",
+    "dayjs-plugin-lunar": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "pinia": "2.0.36",
