--- a/projects/admin/package.json
+++ b/projects/admin/package.json
@@ -15,6 +15,7 @@
     "@unocss/reset": "^0.58.5",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.4.0",
+    "echarts": "^5.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
