chore(server):更换bcrypt库

--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -25,7 +25,7 @@
     "@nestjs/throttler": "^4.2.1",
     "@nestjs/typeorm": "^10.0.1",
     "ali-oss": "^6.20.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv-flow": "^4.1.0",
@@ -47,13 +47,12 @@
     "@antfu/eslint-config": "^0.39.8",
     "@nestjs/cli": "^10.1.10",
     "@nestjs/schematics": "^10.0.1",
-    "@types/bcrypt": "^5.0.2",
+    "@types/ali-oss": "^6.16.11",
     "@types/jest": "29.5.2",
     "@types/node": "18.16.18",
     "@types/node-rsa": "^1.1.1",
     "@types/nodemailer": "^6.4.15",
     "@types/papaparse": "^5.3.14",
-    "@types/ali-oss": "^6.16.11",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.45.0",
